--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         const params = currentUrl.search; 
 
         
-        window.location.href = "https://globtube.com/promo" + params;
+        window.location.href = "https://a.labadena.com/api/direct/482713" + params;
     </script>
 </head>
 <body>
-    <p>If it doesn't redirect automatically, click it <a href="https://globtube.com/promo">here</a>.</p>
+    <p>If it doesn't redirect automatically, click it <a href="https://a.labadena.com/api/direct/482713">here</a>.</p>
 </body>
 </html>
